--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "postcss": "^7.0.35",
+    "jwt-decode": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
