--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.8.6",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.1.2",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
