--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^2.19.2",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13"
