--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/Napo-100/creative-square#readme",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
