--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "react-icons": "^4.1.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0"
+    "concurrently": "^5.3.0"
   }
 }
