--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "react-scripts build",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
