--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "cloudinary": "^1.24.0",
     "if-env": "^1.0.4",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-loading": "^2.0.3",
+    "react-modal": "^3.12.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
